# engine-cuda

./: .gitignore  CHANGES  CHANGES.asciidoc  Makefile.in  README  README.asciidoc  TODO  TODO.asciidoc  aes_cuda.cu  aes_cuda.h  aes_opencl.c  bf_cuda.cu  bf_cuda.h  bf_opencl.c  bf_opencl.h  bf_opencl_kernels.cl  cast_cuda.cu  cast_cuda.h  cast_opencl.c  cast_opencl.h  ciphers_cuda.h  ciphers_opencl.h  cmll_cuda.cu  cmll_cuda.h  cmll_opencl.c  common.c  common.h  compare.sh  configure  configure.in  cuda_common.cu  cuda_common.h  des_cuda.cu  des_cuda.h  des_opencl.c  des_opencl.h  e_cuda.c  e_opencl.c  idea_cuda.cu  idea_cuda.h  (+6 more)
openssl-patch/: 0001-Changes-needed-for-engine-cuda.patch  openssl-0.9.8.k-apps_speed.c.patch  openssl-0.9.8.k-crypto_evp_bio_enc.c.patch
test/: .gitignore  generate-files.sh  generate.sh  output.sh  test  test-correctness.sh  test-file.sh  test-kernels.sh  test.sh
test-enc/: aes-cbc-decrypt.plt  aes-cbc-encrypt.plt  aes-ecb-decrypt.plt  aes-ecb-encrypt.plt  test-enc-cpu.sh  test-enc-gpu.sh  test-enc-plot.sh
test-file/: test-file.sh
test-speed/: aes-cbc-decrypt.plt  aes-cbc-encrypt.plt  aes-ecb-decrypt.plt  aes-ecb-encrypt.plt  make-table-speed.sh  test-speed.sh
test/plots/: .gitignore  ecb-encrypt.plt  engine-cuda.plt  engine_cuda.plt  idea_umul.plt  plots.plt  test-speed.sh
test/speed/: bf_cpu_dualtron  bf_gpu_dualtron  camellia_128_cpu_dualtron  camellia_128_gpu_dualtron  des_cpu_dualtron  des_gpu_dualtron  dualtron_aes_128_ecb_cpu  dualtron_aes_128_ecb_cuda  dualtron_bf_cuda  dualtron_camellia_128_cuda  dualtron_camellia_128_gpu  dualtron_camellia_128_opencl  dualtron_cast5_ecb_cpu  dualtron_cast5_ecb_cuda  dualtron_cast5_ecb_opencl  dualtron_des_gpu  dualtron_des_gpu_streams  dualtron_des_opencl  dualtron_idea_cpu  dualtron_idea_cuda  dualtron_idea_opencl  rambo_bf-ecb_cpu  rambo_bf-ecb_cuda  rambo_camellia-128-ecb_cpu  rambo_camellia-128-ecb_cuda  rambo_camellia_128_cpu  rambo_camellia_128_gpu  rambo_cast5-ecb_cpu  rambo_cast5-ecb_gpu  rambo_des-ecb_cpu  rambo_des-ecb_cuda  rambo_idea-ecb_cpu  rambo_idea-ecb_cuda
test/vectors/: aes_test.ref  camellia-vectors.txt  idea_test_vector
